# emailenvnew

./: Dockerfile  README.md  app.py  baseline.py  client.py  env.py  find_emojis.py  grader.py  hf_test.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
server/: Dockerfile  app.py
