[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "my_env"
version = "0.1.0"
dependencies = [
    "fastapi>=0.135.3",
    "uvicorn>=0.42.0",
    "huggingface_hub>=1.9.0",
    "pydantic>=2.9.0",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"